--- a/src/app/doctor/components/home/home.component.html
+++ b/src/app/doctor/components/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="card">
             <img src="https://fundacionpielsana.es/uploads/noticias/391/dermatologoa-fps-r.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">¿Qué hace un dermatologo?</h5>
+                <h5 class="card-title">¿Qué hace un dermatólogo?</h5>
                 <p class="card-text">Un dermatólogo se dedica a todo lo que tiene que ver con su principal causa de existencia: la piel. Existen infinidad de enfermedades que la afectan que son muy difíciles y complejas por lo que el grado de especialización tanto desde el
                     punto de vista del diagnóstico como del tratamiento es muy importante</p>
                 <a href="https://fundacionpielsana.es/piel-sana/que-hace-un-dermatologo" target="_blank" class="card-link">Más información</a>
