--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -46,7 +46,7 @@
                 <label class="col-form-label" for="">Precio :</label>
             </div>
             <div class="col-xl-10 form-group">
-                <input type="text" class="form-control" #precio formControlName="{{ 'precio' }}" />
+                <input type="number" class="form-control" #precio formControlName="{{ 'precio' }}" />
             </div>
             <div class="col-xl-2 form-group">
                 <label class="col-form-label" for="">Facebook :</label>
