--- a/src/app/patient/components/patient-profile/patient-profile.component.html
+++ b/src/app/patient/components/patient-profile/patient-profile.component.html
@@ -40,7 +40,7 @@
                 <label class="col-form-label" for="">Telefono :</label>
             </div>
             <div class="col-xl-10 form-group">
-                <input type="text" class="form-control" formControlName="{{ 'telefono' }}" />
+                <input type="number" class="form-control" formControlName="{{ 'telefono' }}" />
             </div>
             <div class="col-xl-2 form-group">
                 <label class="col-form-label" for="">Alto (Cm):</label>
