--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -31,6 +31,12 @@
                 <input type="text" class="form-control" #apellidos formControlName="{{ 'segundoApellido' }}" />
             </div>
             <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Descripción :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" #descripcion formControlName="{{ 'descripcion' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
                 <label class="col-form-label" for="">Fecha nacimiento :</label>
             </div>
             <div class="col-xl-10 form-group">
