--- a/src/app/shared/components/register-doctor/register-doctor.component.html
+++ b/src/app/shared/components/register-doctor/register-doctor.component.html
@@ -35,10 +35,11 @@
                     formControlName="nIdentificacion"
                     name="nIdentificacion"
                     #nIdentificacion
+                    maxlength="10"
                   />
                   <div class="text-left">
                     <small *ngIf="nIdentificacionNoValido" class="text-danger"
-                      >Ingrese un número de identificación</small
+                      >Ingrese su número de identificación</small
                     >
                   </div>
                 </div>
