--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -37,6 +37,7 @@
                     formControlName="nIdentificacion"
                     name="nIdentificacion"
                     #nIdentificacion
+                    maxlength="10"
                   />
                   <div class="text-left">
                     <small *ngIf="nIdentificacionNoValido" class="text-danger"
