--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -100,6 +100,8 @@
           name="inputDescription"
           [(ngModel)]="citaModal.description"
           placeholder="Descripción"
+          minlength="3"
+          maxlength="300"
         />
       </div>
       <div class="form-group">
@@ -111,6 +113,8 @@
           name="inputMotivo"
           [(ngModel)]="citaModal.reason"
           placeholder="Motivo"
+          minlength="3"
+          maxlength="150"
         />
       </div>
       <div class="form-group">
