Se agrega calificaciones para que sean visibles para el doctor y paciente

--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.css
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.css
@@ -44,3 +44,9 @@ a:hover {
 .disabled-link {
     pointer-events: none;
 }
+
+.link-calificacion {
+    cursor: pointer;
+    color: #61a7da;
+    text-decoration: underline;
+}
