--- a/src/app/doctor/components/doctor-principal/doctor-principal.component.html
+++ b/src/app/doctor/components/doctor-principal/doctor-principal.component.html
@@ -67,6 +67,13 @@
         >
       </li>
       <li>
+        <a
+          routerLink="/doctor-principal/ratings-doctor"
+          [routerLinkActive]="['is-active']"
+          >Calificaciones</a
+        >
+      </li>
+      <li>
         <a (click)="closeSession()">Salir</a>
             </li>
         </ul>
@@ -130,6 +137,11 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/doctor-principal/products-doctor"
                 >Productos</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/doctor-principal/ratings-doctor"
+                >Calificaciones</a
               >
             </li>
             <li class="nav-item">
