Se agrega información dermatologica a la mayoria de secciones con las que interactua el paciente

--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -68,7 +68,7 @@
                     <a
                       class="font-italic text-muted link"
                       (click)="openModalRestorePassword()"
-                      >Reestrablecer contraseña</a
+                      >Restrablecer contraseña</a
                     >
                   </p>
                 </div>
